Column sorting. Hide bank name if logo. Double-click headers bug fix.

--- a/src/Finances.WinClient/ResourceDictionaries/Converters.xaml
+++ b/src/Finances.WinClient/ResourceDictionaries/Converters.xaml
@@ -12,6 +12,7 @@
     <conv:NullToCollapsedConverter x:Key="NullToCollapsedConverter" />
     <conv:ToggleBooleanConverter x:Key="ToggleBooleanConverter" />
     <conv:MultiBooleanAndConverter x:Key="MultiBooleanAndConverter" />
+    <conv:EmptyConverter x:Key="EmptyConverter" />
     
     <finconv:AccountElsewhereToVisibileConverter x:Key="AccountElsewhereToVisibileConverter"/>
     <finconv:AccountElsewhereToCollapsedConverter x:Key="AccountElsewhereToCollapsedConverter"/>
