--- a/src/Finances.WinClient/Views/BankView.xaml
+++ b/src/Finances.WinClient/Views/BankView.xaml
@@ -7,12 +7,16 @@
              mc:Ignorable="d"
              d:DataContext="{d:DesignData Source=/DesignTimeData/Bank.xaml}">
     <Grid>
-        <Border BorderThickness="1" BorderBrush="DarkCyan" CornerRadius="3" Padding="1">
+        <Border BorderThickness="1" BorderBrush="DarkCyan" CornerRadius="2" Padding="1">
             <StackPanel Orientation="Horizontal">
-                <Border Height="20" Width="50" BorderThickness="1" BorderBrush="Thistle">
-                    <Image Source="{Binding Logo}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                </Border>
-                <TextBlock Text="{Binding Name}" Padding="5,0,5,0" VerticalAlignment="Center"/>
+                <Grid Visibility="{Binding HasLogo, Converter={StaticResource PositiveVisibilityConverter}}">
+                    <Border Height="20" Width="50" BorderThickness="0" CornerRadius="1" BorderBrush="Thistle">
+                        <Image Source="{Binding Logo}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                    </Border>
+                </Grid>
+                <Grid Visibility="{Binding HasLogo, Converter={StaticResource NegativeVisibilityConverter}}">
+                    <TextBlock Text="{Binding Name}" Padding="5,0,5,0" VerticalAlignment="Center"/>
+                </Grid>
             </StackPanel>
         </Border>
     </Grid>
