--- a/src/Finances.WinClient/Views/TransferDirectionInboundView.xaml
+++ b/src/Finances.WinClient/Views/TransferDirectionInboundView.xaml
@@ -10,7 +10,8 @@
     <!--DataContext is expected to be a TransferViewModel-->
     <Grid>
         <StackPanel Orientation="Horizontal">
-            <TextBlock Text="Incoming to " Foreground="Green" VerticalAlignment="Center"/>
+            <TextBlock Text="{Binding DirectionName}" Foreground="Green" VerticalAlignment="Center"/>
+            <TextBlock Text=" to " Foreground="Green" VerticalAlignment="Center"/>
             <ContentPresenter Content="{Binding ToBankAccount}" ContentTemplate="{StaticResource BankAccountDataTemplate}"/>
         </StackPanel>  
     </Grid>
