--- a/src/Finances.WinClient/Views/BanksView.xaml
+++ b/src/Finances.WinClient/Views/BanksView.xaml
@@ -12,6 +12,7 @@
              xmlns:views="clr-namespace:Finances.WinClient.Views"
              xmlns:lib="clr-namespace:Finances.Core.Wpf;assembly=Finances.Core.Wpf"
              xmlns:libctl="clr-namespace:Finances.Core.Wpf.Controls;assembly=Finances.Core.Wpf"
+             xmlns:libattach="clr-namespace:Finances.Core.Wpf.AttachedProperties;assembly=Finances.Core.Wpf"
              mc:Ignorable="d"
              x:Name="apex"
              d:DesignHeight="300" d:DesignWidth="300"
@@ -64,7 +65,7 @@
                             ItemsSource="{Binding Banks}" 
                             SelectionMode="Extended"
                             ColumnWidthStore="{Binding ViewData[ListViewColumnWidths], Mode=TwoWay}"
-                            MouseDoubleClickCommand="{Binding EditCommand}"
+                            libattach:ListViewDoubleClickBehavior.DoubleClickCommand="{Binding EditCommand}"
                             >
 
                     <libctl:ListViewScroll.InputBindings>
