--- a/src/Finances.WinClient/Views/TransferEditorView.xaml
+++ b/src/Finances.WinClient/Views/TransferEditorView.xaml
@@ -30,7 +30,7 @@
 
             <Style TargetType="Label">
                 <Setter Property="VerticalContentAlignment" Value="Center" />
-                <Setter Property="Height" Value="25" />
+                <!--<Setter Property="Height" Value="25" />-->
             </Style>
             <Style TargetType="TextBox" BasedOn="{StaticResource {x:Type Control}}" >
                 <Setter Property="Background" Value="Beige" />
@@ -47,7 +47,7 @@
             </Style>
             <Style TargetType="DatePicker" >
                 <!--<Setter Property="Background" Value="Beige" />-->
-                <Setter Property="Height" Value="25" />
+                <Setter Property="MinHeight" Value="25" />
                 <Setter Property="HorizontalAlignment" Value="Left" />
                 <Setter Property="VerticalContentAlignment" Value="Center" />
                 <Setter Property="Validation.ErrorTemplate" Value="{StaticResource validationTemplate}" />
